ClientResource without Mail Service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ quarkus.datasource.db-kind=mssql
 quarkus.datasource.username=sa
 quarkus.datasource.password=azerty@123456
 
-quarkus.datasource.jdbc.url=jdbc:sqlserver://localhost;encrypt=false;databaseName=SERVICE_MAIL
+quarkus.datasource.jdbc.url=jdbc:sqlserver://localhost:1555;encrypt=false;databaseName=SERVICE_MAIL
 quarkus.hibernate-orm.database.generation=none
 quarkus.hibernate-orm.log.sql=true
 
