--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,18 @@
-quarkus.http.port=8081
+quarkus.http.port=8082
 
 quarkus.datasource.db-kind=mssql
-quarkus.datasource.username=sa
-quarkus.datasource.password=azerty@123456
+quarkus.datasource.username=${DB_USERNAME}
+quarkus.datasource.password=${DB_PASSWORD}
 
-quarkus.datasource.jdbc.url=jdbc:sqlserver://localhost:1555;encrypt=false;databaseName=SERVICE_MAIL
+quarkus.datasource.jdbc.url=jdbc:sqlserver://localhost:1555;encrypt=false;databaseName=${DB_NAME}
 quarkus.hibernate-orm.database.generation=none
 quarkus.hibernate-orm.log.sql=true
 
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/doc
+
+quarkus.rest-client.mail-service.url=http://localhost:8080
+quarkus.rest-client.mail-service.scope=jakarta.inject.Singleton
+
+quarkus.http.cors=true
+%dev.quarkus.http.cors.origins=/.*/
