change ApiKeyResource.java no Response but Object

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ quarkus.hibernate-orm.log.sql=true
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/doc
 
-quarkus.rest-client.mail-service.url=http://localhost:8080/api
+quarkus.rest-client.mail-service.url=http://localhost:8080/
 quarkus.rest-client.mail-service.scope=jakarta.inject.Singleton
 
 quarkus.http.cors=true
